# GuiTest

./: GuiTest.cabal  README.md
src/: DiffImg.hs  MaskImg.hs  Screenshot.hs  screenshot.sh
